--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
         <textarea rows="3" id="quote-input" placeholder="Type here when the test starts.."></textarea>
         <div class="button-group">
           <button id="start-test" onclick="startTest()">Start Test</button>
+          <button id="retry-test" onclick="startTest()">Retry</button>
           <button id="stop-test" onclick="displayResult()" disabled>Stop Test</button>
         </div>
         <div class="result">
@@ -273,6 +274,7 @@
     const displayResult = () => {
       // Display result div
       document.querySelector(".result").style.display = "block";
+      document.querySelector("#retry-test").style.display = "block";
       clearInterval(timer);
       document.getElementById("stop-test").style.display = "none";
       userInput.disabled = true;
@@ -289,8 +291,10 @@
     // Start Test
     const startTest = () => {
       document.getElementById("start-test").style.display = "none";
+      document.getElementById("retry-test").style.display = "none";
       document.getElementById("stop-test").style.display = "block";
       userInput.disabled = false;
+      userInput.value= "";
       userInput.focus();
       timeReduce();
       renderNewQuote();
